[Fixed] Scrollball is now visible only on module. Not on body. [Update] Admin menu.

--- a/temas/sinhco/css/styles.css
+++ b/temas/sinhco/css/styles.css
@@ -19,6 +19,14 @@ nav {
 }
 /**************************/
 
+#main {
+    position: absolute; 
+    top: 64px;
+    bottom: 0px; 
+    width: 100%; 
+    overflow-y: auto; 
+}
+
 
 @media only screen and (min-width: 992px) {
     .modal.bottom-sheet{
